[gd_scene load_steps=4 format=3 uid="uid://hvg3s5w7ybvu"]

[ext_resource type="Theme" uid="uid://cxq38wk7w6ors" path="res://addons/bearware_tools/bundle-explorer/assets/theme.tres" id="1_0xq5f"]
[ext_resource type="Script" uid="uid://bx86iiaiiee6p" path="res://addons/bearware_tools/bundle-explorer/explorer.gd" id="1_7cl0m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ig7tw"]
bg_color = Color(0.0313726, 0.0313726, 0.0431373, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Explorer" type="Window"]
size = Vector2i(500, 700)
visible = false
script = ExtResource("1_7cl0m")

[node name="Scroll" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0xq5f")
theme_override_styles/panel = SubResource("StyleBoxFlat_ig7tw")
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="Scroll"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Details" type="HBoxContainer" parent="Scroll/List"]
layout_mode = 2

[node name="AllUNs" type="Button" parent="Scroll/List/Details"]
layout_mode = 2
toggle_mode = true
text = "All UNs"

[node name="Window" type="Window" parent="Scroll/List/Details/AllUNs"]
position = Vector2i(550, 200)
size = Vector2i(400, 500)
visible = false
force_native = true

[node name="Scroll" type="ScrollContainer" parent="Scroll/List/Details/AllUNs/Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="Scroll/List/Details/AllUNs/Window/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BundleSelector" type="OptionButton" parent="Scroll/List"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BundleTitle" type="Label" parent="Scroll/List"]
layout_mode = 2
autowrap_mode = 2

[node name="BundleAuthor" type="Label" parent="Scroll/List"]
layout_mode = 2
autowrap_mode = 2

[node name="BundleDescription" type="Label" parent="Scroll/List"]
layout_mode = 2
autowrap_mode = 2

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="visibility_changed" from="." to="." method="_visibility_changed"]
[connection signal="toggled" from="Scroll/List/Details/AllUNs" to="Scroll/List/Details/AllUNs/Window" method="set_visible"]
[connection signal="close_requested" from="Scroll/List/Details/AllUNs/Window" to="Scroll/List/Details/AllUNs" method="set_pressed" binds= [false]]
[connection signal="item_selected" from="Scroll/List/BundleSelector" to="Scroll" method="_change_to_bundle"]
